--- a/tests/.padpt/padpterror.conf
+++ b/tests/.padpt/padpterror.conf
@@ -1,7 +1,7 @@
 # This is a config file for padpt.
 # Please edit this file before running padpt.
 
-[PadPT]
+[PadPT # Error
 Font=/System/Library/Fonts/ヒラギノ角ゴ ProN W6.otf
 
-DB_URL=http://localhost/db
+DB_URL=http://www.foo.jp/padpt
